--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Homework 5</title>
+    <title>Homework 6</title>
   </head>
   <body style="color: #434455">
     <!--NAVIGATION HEADER-->
-    <header class="header-box">
+    <!-- <header class="header-box">
       <div class="container">
         <nav class="site-nav">
           <a class="logo-header" href="./index.html"
@@ -56,15 +56,15 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- HERO SECTION -->
-      <section class="hero-section">
+      <!-- <section class="hero-section">
         <div class="container">
           <h1 class="hero-name">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!--STRATEGY SECTION-->
       <section class="strategy-section">
@@ -124,8 +124,8 @@
       </section>
 
       <!--TEAM SECTION-->
-      <section class="team-section" id="portfolio">
-        <div class="container">
+     <section  class="team-section" id="portfolio">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
@@ -301,7 +301,7 @@
       </section>
 
       <!--PORTFOLIO SECTION-->
-      <section class="portfolio-section">
+      <!-- <section class="portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -422,11 +422,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--FOOTER-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-box">
         <div class="footer-box-left">
           <a class="logo-footer" href="./index.html"
@@ -492,11 +492,11 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <!--MODAL-->
+    <!-- MODAL -->
 
-    <div class="backdrop">
+    <!-- <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-icons" height="8" width="8">
@@ -581,7 +581,7 @@
 
           <button class="submit-button" type="submit">Send</button>
         </form>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
