--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </section>
 
       <!--TEAM SECTION-->
-     <section  class="team-section" id="portfolio">
+      <section class="team-section" id="portfolio">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -301,8 +301,8 @@
       </section>
 
       <!--PORTFOLIO SECTION-->
-      <!-- <section class="portfolio-section">
-        <div class="container">
+      <section class="portfolio-section">
+        <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
           <ul class="portfolio-list">
@@ -422,11 +422,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--FOOTER-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-box">
         <div class="footer-box-left">
           <a class="logo-footer" href="./index.html"
@@ -492,7 +492,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL -->
 
