--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body style="color: #434455">
     <!--NAVIGATION HEADER-->
-    <!-- <header class="header-box">
+    <header class="header-box">
       <div class="container">
         <nav class="site-nav">
           <a class="logo-header" href="./index.html"
@@ -56,15 +56,15 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- HERO SECTION -->
-      <!-- <section class="hero-section">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-name">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!--STRATEGY SECTION-->
       <section class="strategy-section">
@@ -449,21 +449,21 @@
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="instagram">
+              <a class="footer-link" href="twitter">
                 <svg class="icon-class" height="24" width="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="instagram">
+              <a class="footer-link" href="facebook">
                 <svg class="icon-class" height="24" width="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
-              <a class="footer-link" href="instagram">
+              <a class="footer-link" href="linkedin">
                 <svg class="icon-class" height="24" width="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
@@ -496,7 +496,7 @@
 
     <!-- MODAL -->
 
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-icons" height="8" width="8">
@@ -581,7 +581,74 @@
 
           <button class="submit-button" type="submit">Send</button>
         </form>
-      </div> -->
+      </div>
+    </div>
+
+    <!-- MOBILE MENU -->
+    <div class="mobile-menu">
+      <button class="mobile-menu-close" type="button" aria-label="Close menu">
+        <svg class="mobile-menu-close-icon" width="8" height="8">
+          <use href="./images/icons2.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <nav>
+        <ul class="mobile-nav-list">
+          <li>
+            <a class="mobile-nav-link active" href="./index.html">Studio</a>
+          </li>
+          <li><a class="mobile-nav-link" href="">Portfolio</a></li>
+          <li><a class="mobile-nav-link" href="">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <div class="mobile-menu-bottom">
+        <address>
+          <ul class="mobile-contacts-list">
+            <li>
+              <a class="mobile-contact-link phone" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a class="mobile-contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="mobile-social-list">
+          <li class="mobile-social-item">
+            <a class="mobile-social-link" href="">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a class="mobile-social-link" href="">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a class="mobile-social-link" href="">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-item">
+            <a class="mobile-social-link" href="">
+              <svg class="mobile-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
