--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!--MOBILE MENU-->
     <div class="mob-menu" id="mob-menu" aria-hidden="true">
-      <div class="mob-menu-container">
+      <div class="container mob-menu-container">
         <button type="button" class="modal-close-mob" aria-label="Close menu">
           <svg class="modal-icon-close" height="8" width="8">
             <use href="./images/icons2.svg#icon-close"></use>
@@ -87,13 +87,13 @@
         <address class="mob-menu-contacts">
           <ul class="mob-menu-contacts-list">
             <li class="mob-menu-contacts-item">
-              <a class="mob-menu-contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="mob-menu-contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
               >
             </li>
             <li class="mob-menu-contacts-item">
-              <a class="mob-menu-contacts-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
+              <a class="mob-menu-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
               >
             </li>
           </ul>
